import and cli complete

--- a/config/config.toml
+++ b/config/config.toml
@@ -2,10 +2,17 @@
   as = 64551
   router-id = "192.168.151.100"
 
-#[[neighbors]]
-#[neighbors.config]
-#  neighbor-address = "192.168.151.161"
-#  peer-as = "65413"
+[[neighbors]]
+[neighbors.config]
+  neighbor-address = "192.168.151.161"
+  peer-as = "65413"
+
+[[neighbors]]
+[neighbors.config]
+  neighbor-address = "192.168.151.101"
+  peer-as = "64553"
+
+
 
 [netlink]
   [netlink.import]
